# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.323.2.31 2007-03-02 00:09:47 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

2.1.6 (2007/03/02)
 - (2007/03/02) fixed bug #1548 - submitting AgentTicketPhone or
    AgentTicketEmail form without queueid leads to broken fields
 - (2007/02/27) fixed bug #1581 - Garbled paths containing domain names
 - (2007/02/27) updated Mail::Tools from 1.60 to 1.75 - fixed bug #1642 -
    Cant get mails via PostmasterPop3.pl - Unrecognised line
 - (2007/02/27) fixed bug #1545 - Wrong Variableusage in $Self->{PageShown}
    (Kernel/Modules/AgentTicketMailbox.pm)
 - (2007/02/26) fixed bug #1291 - Download link in SysConfig skips config
    options -> now download link will be shown if no changes are done
 - (2007/02/26) fixed bug #1097 - Disabling Bounce Feature via SysConfig does
    not work properly
 - (2007/02/26) fixed ticket #2007022242000293 hard line rewrap of body content
    in frontend modules
 - (2007/02/26) improved speed of SysConfig core module, added cache mechanism
    (it's about 2 times faster)
 - (2007/02/22) fixed ticket #2007022042000288 - error on creating postmaster
    filter on oracle database
 - (2007/02/20) fixed not working crypt/sign option in AgentTicketCompose mask
 - (2007/02/20) fixed bug #980 - Use of uninitialized value in
    Kernel/System/AuthSession/FS.pm
 - (2007/02/15) changed unlock time reset mechanism, added unlock time reset
    if a agent sends an external message to the customer (like escalation
    reset mechanism)
 - (2007/02/09) fixed bug in _XMLHashAddAutoIncrement() - function could not
    return keys greater than '9'.
 - (2007/02/02) fixed bug #1056 - UTF-8 mode of OTRS and German Umlaute within
    agent's name